<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:contentDescription="@string/layout_scroll_dashboard_manga"
    tools:context=".DashboardMangaFragment"
    tools:theme="@style/Theme.LeleNimeXML">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_trending_manga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/slight_rounded_corners"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_header_top_manga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/trending"
                        android:textColor="?android:attr/textColorPrimary"
                        app:fontFamily="@font/source_sans_pro_semi_bold"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_more_top_manga"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/btn_more_top_manga" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/btn_more_top_manga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_top_manga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:clipChildren="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_header_top_manga"
                app:shimmer_auto_start="true"
                app:shimmer_base_color="?android:attr/textColorPrimary"
                app:shimmer_direction="left_to_right">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_manga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="170dp"
                    android:orientation="horizontal"
                    android:splitMotionEvents="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/anime_horizontal_item" />
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/slight_rounded_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_trending_manga">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_header_recommendation_manga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/recommendation"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:fontFamily="@font/source_sans_pro_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommendation_manga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_header_recommendation_manga"
                tools:listitem="@layout/recommendation_item" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_recommendation_page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?android:attr/textColorPrimary"
                app:fontFamily="@font/source_sans_pro_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_recommendation_manga"
                tools:text="@string/recommendation_page_number" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>