<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="ExploreFragment"
    tools:theme="@style/Theme.LeleNimeXML">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_header_title"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:letterSpacing="0.0125"
            android:text="@string/anime"
            android:textColor="?android:attr/textColorPrimary"
            app:fontFamily="@font/noto_sans_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_header_date"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintStart_toStartOf="@id/tv_header_title"
            app:layout_constraintTop_toBottomOf="@id/tv_header_title"
            tools:text="2 February 2023" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_header_top_anime"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.0125"
            android:text="@string/trending"
            android:textColor="?android:attr/textColorPrimary"
            app:fontFamily="@font/noto_sans_bold"
            app:layout_constraintEnd_toStartOf="@id/btn_more_top_anime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header_date" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_more_top_anime"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="@id/tv_header_top_anime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header_top_anime"
            app:tint="?android:attr/textColorPrimary" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_top_anime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipChildren="true"
            app:layout_constraintTop_toBottomOf="@id/btn_more_top_anime"
            app:shimmer_auto_start="true"
            app:shimmer_base_color="?android:attr/textColorPrimary"
            app:shimmer_direction="left_to_right">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="170dp"
                android:orientation="horizontal"
                android:splitMotionEvents="false"
                app:layout_constraintTop_toBottomOf="@+id/btn_more_top_anime"
                tools:itemCount="5"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_card_anime_horizontal" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_header_airing_anime"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.0125"
            android:text="@string/currently_airing"
            app:fontFamily="@font/noto_sans_bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_more_airing_anime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmer_top_anime" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_more_airing_anime"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="@id/tv_header_airing_anime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header_airing_anime"
            app:tint="?android:attr/textColorPrimary" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_airing_anime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipChildren="true"
            app:layout_constraintTop_toBottomOf="@+id/btn_more_airing_anime"
            app:shimmer_auto_start="true"
            app:shimmer_base_color="?android:attr/textColorPrimary"
            app:shimmer_direction="left_to_right">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_airing_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="170dp"
                android:orientation="horizontal"
                android:splitMotionEvents="false"
                app:layout_constraintTop_toBottomOf="@+id/btn_more_top_anime"
                tools:itemCount="5"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_card_anime_horizontal" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_header_recommendation_anime"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.0125"
            android:text="@string/recommendation"
            app:fontFamily="@font/noto_sans_bold"
            app:layout_constraintTop_toBottomOf="@+id/shimmer_airing_anime"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation_anime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_header_recommendation_anime"
            tools:listitem="@layout/recommendation_item" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@id/rv_recommendation_anime" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>